# Mirum

./: CMakeLists.txt  Mirum.cpp  README.md
Game/: Map.cpp  Player.cpp
General/: EventManager.cpp  GlobalVariables.cpp  Init.cpp  Settings.cpp  TexturesManager.cpp
General/Settings/: Game.cpp  User.cpp
Geometry/: Line.cpp  Segment.cpp  Vector2.cpp
Includes/Game/: GameProcessor.hpp  Map.hpp  Player.hpp
Includes/General/: Defines.hpp  EventManager.hpp  GlobalVariables.hpp  Init.hpp  MenuManager.hpp  Settings.hpp  TexturesManager.hpp
Includes/Geometry/: Line.hpp  Ray.hpp  Segment.hpp  Vector2.hpp  enums.hpp  line_intersection.hpp
Includes/MirumUI/: MainMenu.hpp  SettingsMenu.hpp  SinglePlayerMenu.hpp
Includes/Tools/: EventHandler.hpp
Includes/UI/: All.hpp  UI.hpp
MirumUI/MainMenu/: ExitButton.cpp  MainMenu.cpp  SettingsButton.cpp  SinglePlayerButton.cpp
MirumUI/SettingsMenu/: BackButton.cpp  ChangeResolution.cpp  SettingsMenu.cpp
MirumUI/SinglePlayerMenu/: SinglePlayerMenu.cpp
UI/Functions/: Drawing.cpp
UI/Objects/: Button.cpp  ButtonList.cpp  EmptyButton.cpp  ImageWithText.cpp  Menu.cpp
include/: app.hpp  command.hpp
include/controllers/: icontroller.hpp  main_controller.hpp
include/event_handling/: event_handler.hpp  key.hpp  node.hpp  observers_manager.hpp
include/general/: app.hpp  icontroller.hpp  renderer.hpp  sfml_renderer.hpp
include/input/: events.hpp  iinput_component.hpp  input_component.hpp  input_component_state.hpp  sfml_input_component.hpp
include/interfaces/: command.hpp  input.hpp  observable.hpp  (+2 more)
src/: app.cpp  main.cpp
(+75 files in other folders)
